subnet-asso.tf
#resource "aws_route_table_association" "SAP-VPC-PBroute1-asso" {
 # subnet_id      = aws_subnet.SAP-VPC-subnet-1.id
  #route_table_id = aws_route_table.SAP-VPC-PB-route1.id
#}

#resource "aws_route_table_association" "SAP-VPC-PBroute2-asso" {
 # subnet_id      = aws_subnet.SAP-VPC-subnet-2.id
 # route_table_id = aws_route_table.SAP-VPC-PB-route2.id
#}
